# rs_vimium

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  crepus.toml  package.json  webext.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-27-new-tab-customization.md
docs/superpowers/specs/: 2026-05-27-new-tab-customization-design.md
pages/: action.crepus  action.html  new-tab.crepus  options.crepus  options.html  popup.crepus
runtime/: Cargo.toml
runtime/src/: background.rs  commands.rs  key_handler.rs  lib.rs  settings.rs  vomnibar.rs
runtime/views/: ui.crepus
scripts/: benchmark.mjs
src/: background.js  browser-shim.js  content.css  content.css.crepus  content.js  options.js  popup.js
views/: ui.crepus
