[workspace]
members = ["runtime"]
resolver = "2"

[workspace.dependencies]
crepuscularity-core = { path = "../crepuscularity/crates/crepuscularity-core" }
crepuscularity-web = { path = "../crepuscularity/crates/crepuscularity-web" }
crepuscularity-webext = { path = "../crepuscularity/crates/crepuscularity-webext", features = ["wasm"] }
once_cell = "1"
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "=0.2.117"
wasm-bindgen-futures = "0.4"
