[workspace]
members = ["runtime"]
resolver = "2"

[workspace.package]
license = "MPL-2.0"
repository = "https://github.com/undivisible/rs_vimium"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
crepuscularity-core = { path = "../crepuscularity/crates/crepuscularity-core" }
crepuscularity-web = { path = "../crepuscularity/crates/crepuscularity-web" }
crepuscularity-webext = { path = "../crepuscularity/crates/crepuscularity-webext", features = ["wasm"] }
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "DomTokenList",
    "Element",
    "Event",
    "EventTarget",
    "History",
    "HtmlFormElement",
    "HtmlHeadElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "Location",
    "Node",
    "NodeList",
    "Range",
    "Request",
    "RequestInit",
    "Response",
    "Selection",
    "Url",
    "UrlSearchParams",
    "Window",
] }
